--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html ng-app="myApp">
   <head>
     <title>Event-Management</title>
+    <base href="/">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"</script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
+    <script src= "https://code.angularjs.org/1.4.7/angular-route.js"></script>
+    <!-- // <script src= "https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script> -->
     <script src= "app/app.js"></script>
+    <script src="controller/myCtrl.js"></script>
   </head>
   <body>
     
@@ -26,8 +30,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a ng-href="/about">About</a></li>
+            <li><a ng-href="/contact">Contact</a></li>
           </ul>
           
           <ul class="nav navbar-nav navbar-right">
@@ -49,10 +53,14 @@
 
     <div class="container">
       <div class="starter">
-        <label for="firstName">First Name :</label>
-        <input type="text" placeholder="Enter a word" ng-model="myName">
+        <div ng-controller="myCtrl as prt">
 
-        <h1>Hello, {{myName}}</h1>
+        <!--   <label for="firstName">First Name :</label>
+          <input type="text" placeholder="Enter a word" ng-model="firstName"> -->
+
+          <h1>Hello, {{prt.firstName}}</h1>
+          <ng-view></ng-view>
+        </div>
       </div>
     </div>
 
