--- a/index.html
+++ b/index.html
@@ -10,55 +10,20 @@
     <!-- // <script src= "https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script> -->
     <script src= "app/app.js"></script>
     <script src="controller/myCtrl.js"></script>
+    <script src="services/eventFactory.js"></script>
   </head>
   <body>
     
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Event Manager</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-            <li><a ng-href="/about">About</a></li>
-            <li><a ng-href="/contact">Contact</a></li>
-          </ul>
-          
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">More</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Settings <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+    <div ng-include= "'partials/nav.html'"></div>
 
     <div class="container">
-      <div class="starter">
-        <div ng-controller="myCtrl as prt">
+      <!-- <div class="starter"> -->
+        <!-- <div ng-controller="formCtrl"> -->
 
         <!--   <label for="firstName">First Name :</label>
           <input type="text" placeholder="Enter a word" ng-model="firstName"> -->
 
-          <h1>Hello, {{prt.firstName}}</h1>
+          <!-- <h1>Hello, </h1> -->
           <ng-view></ng-view>
         </div>
       </div>
