Improved validation message management

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
     <script src= "https://code.angularjs.org/1.4.7/angular-route.js"></script>
     <!-- // <script src= "https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.3/angular-messages.js"></script>
     <script src= "app/app.js"></script>
     <script src="controller/myCtrl.js"></script>
     <script src="services/eventFactory.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     
