--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
     <script src= "https://code.angularjs.org/1.4.7/angular-route.js"></script>
+    <script src= "https://code.angularjs.org/1.4.3/angular-mocks.js"></script>
     <!-- // <script src= "https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.3/angular-messages.js"></script>
     <script src= "app/app.js"></script>
+    <script src= "backend/app-run-mock.js"></script>
     <script src="controller/myCtrl.js"></script>
     <script src="services/eventFactory.js"></script>
     <link rel="stylesheet" href="style.css">
